@@ -1,3 +1,8 @@
+2008-12-09  Gordon Williams <gordon.williams@collabora.co.uk>
+	* src/home/hd-task-navigator.c:
+	  Fixed flicker to background that appeared on zoom in/out, added smooth
+	  fade in + out of application border + title.
+
 2008-12-09  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* src/home/hd-home-view.c (hd_home_view_constructed,
